Update 19.05.24 - Carga del navbar, corrección de errores y mejoras.
-Se subió el navbar (80%)
-Falta modificar el firebase con sus configuraciones para mantener los datos del usuario al navegar por las vistas.
-Correciones de strings, activities, lógica y layouts.
-Carga de nuevo logo.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_logo3"
+        android:icon="@mipmap/ic_launcher4"
         android:label="@string/nombre_app"
-        android:roundIcon="@mipmap/ic_logo3"
+        android:roundIcon="@mipmap/ic_launcher4_round"
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.ProyectoFixitFinal.Fixit"
         tools:targetApi="31">
@@ -111,5 +111,7 @@
             </intent-filter>
         </activity>
     </application>
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
 </manifest>
