--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:required="false" /> <!-- Permiso para realizar llamadas telefónicas -->
     <uses-permission android:name="android.permission.CALL_PHONE" /> <!-- Permiso para enviar correos electrónicos -->
     <uses-permission android:name="android.permission.SENDTO" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
     <application
         android:allowBackup="true"
@@ -55,25 +57,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Home"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".SelectUser"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".Help"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -91,15 +75,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SpecialistCategorys"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
             android:name=".Specialist.ProfileSpecialist"
             android:exported="true">
             <intent-filter>
@@ -109,7 +84,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MenuSpecialist"
+            android:name=".Specialist.ViewSpecialistServices"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
