Se agregó el las funciones de ver perfil especialista y contactar al especialista para el cliente.
-Creación y modificación de vistas xml.
-Carga de Funciones y Activities.
-Manejo de errores.
-Configuración firebase.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".Specialist.ViewSpecialistComments" android:exported="true" />
         <activity android:name=".Specialist.ViewSpecialistsByCategory" android:exported="true" />
         <activity android:name=".Specialist.DetailServiceClient" android:exported="true" />
+        <activity android:name=".Specialist.PersonalProfileSpecialist" android:exported="true" />
 
         <!-- Client Activities -->
         <activity android:name=".Client.ChangePasswordClient" android:exported="false" />
