Sección de comentarios y su funcionalidad.
Se agregó la vista para hacer comentarios la cual es funcional.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,13 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SENDTO" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32" />
 
-    <uses-feature android:name="android.hardware.telephony" android:required="false" />
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -19,35 +23,75 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.ProyectoFixitFinal.Fixit"
         tools:targetApi="31">
-
         <!-- Specialist Activities -->
-        <activity android:name=".Specialist.ChangePasswordSpecialist" android:exported="false" />
-        <activity android:name=".Specialist.RegisterSpecialist" android:exported="true" />
-        <activity android:name=".Specialist.CreateServicesSpecialist" android:exported="true" />
-        <activity android:name=".Specialist.ProfileSpecialist" android:exported="true" />
-        <activity android:name=".Specialist.ViewSpecialistServices" android:exported="true" />
-        <activity android:name=".Specialist.ViewSpecialistDetailService" android:exported="true" />
-        <activity android:name=".Specialist.ViewSpecialistComments" android:exported="true" />
-        <activity android:name=".Specialist.ViewSpecialistsByCategory" android:exported="true" />
-        <activity android:name=".Specialist.DetailServiceClient" android:exported="true" />
-        <activity android:name=".Specialist.PersonalProfileSpecialist" android:exported="true" />
-
+        <activity
+            android:name=".Specialist.ChangePasswordSpecialist"
+            android:exported="false" />
+        <activity
+            android:name=".Specialist.RegisterSpecialist"
+            android:exported="true" />
+        <activity
+            android:name=".Specialist.CreateServicesSpecialist"
+            android:exported="true" />
+        <activity
+            android:name=".Specialist.ProfileSpecialist"
+            android:exported="true" />
+        <activity
+            android:name=".Specialist.ViewSpecialistServices"
+            android:exported="true" />
+        <activity
+            android:name=".Specialist.ViewSpecialistDetailService"
+            android:exported="true" />
+        <activity
+            android:name=".Specialist.ViewSpecialistComments"
+            android:exported="true" />
+        <activity
+            android:name=".Specialist.ViewSpecialistsByCategory"
+            android:exported="true" />
+        <activity
+            android:name=".Specialist.DetailServiceClient"
+            android:exported="true" />
+        <activity
+            android:name=".Specialist.PersonalProfileSpecialist"
+            android:exported="true" />
         <!-- Client Activities -->
-        <activity android:name=".Client.ChangePasswordClient" android:exported="false" />
-        <activity android:name=".Client.RegisterClient" android:exported="true" />
-        <activity android:name=".Client.ProfileClient" android:exported="true" />
-
+        <activity
+            android:name=".Client.ChangePasswordClient"
+            android:exported="false" />
+        <activity
+            android:name=".Client.RegisterClient"
+            android:exported="true" />
+        <activity
+            android:name=".Client.ProfileClient"
+            android:exported="true" />
+        <activity
+            android:name=".Client.AddComments"
+            android:exported="false" />
+        <activity
+            android:name=".Client.ClientsComments"
+            android:exported="false" />
         <!-- Common Activities -->
-        <activity android:name=".MainActivity" android:exported="true">
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NavBarClient" android:exported="false" />
-        <activity android:name=".NavBar" android:exported="false" />
-        <activity android:name=".Login" android:exported="true" />
-        <activity android:name=".SelectUser" android:exported="true" />
-
+        <activity
+            android:name=".NavBarClient"
+            android:exported="false" />
+        <activity
+            android:name=".NavBar"
+            android:exported="false" />
+        <activity
+            android:name=".Login"
+            android:exported="true" />
+        <activity
+            android:name=".SelectUser"
+            android:exported="true" />
     </application>
+
 </manifest>
