Lista de especialistas del Admin completa
Se puede ver la lista de especialistas completa, los detalles del especialista (se puede eliminar el usuario y descargar los antecedentes), se puede ver los servicios del especialistas, ver los detalles del servicio con sus comentarios, eliminar comentarios y el servicio.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.ProyectoFixitFinal.Fixit"
         tools:targetApi="31">
-
         <!-- Specialist Activities -->
         <activity
             android:name=".Specialist.ChangePasswordSpecialist"
@@ -71,20 +70,32 @@
             android:name=".Client.ClientsComments"
             android:exported="false" /> <!-- Admin Activities -->
         <activity
-            android:name=".Admin.ViewSpecialistsAdmin"
+            android:name=".Admin.MenuAdmin"
             android:exported="false" />
         <activity
             android:name=".Admin.ViewClientsAdmin"
             android:exported="false" />
         <activity
-            android:name=".Admin.RequestsAdmin"
-            android:exported="false" />
-        <activity
             android:name=".Admin.ProfileClientAdmin"
             android:exported="false" />
         <activity
-            android:name=".Admin.MenuAdmin"
-            android:exported="false" /><!-- Common Activities -->
+            android:name=".Admin.ViewSpecialistsAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.ProfileSpecialistAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.ViewSpecialistServicesAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.ViewSpecialistDetailServiceAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.ViewCommentsServiceAdmin"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.RequestsAdmin"
+            android:exported="false" /> <!-- Common Activities -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
