--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         tools:targetApi="31">
         <!-- Specialist Activities -->
         <activity
+            android:name=".Specialist.ServicesRequest"
+            android:exported="true" />
+        <activity
             android:name=".Specialist.ChangePasswordSpecialist"
             android:exported="false" />
         <activity
@@ -54,6 +57,9 @@
         <activity
             android:name=".Client.PersonalProfileSpecialist"
             android:exported="true" /> <!-- Client Activities -->
+        <activity
+            android:name=".Client.ServicesHistory"
+            android:exported="true" />
         <activity
             android:name=".Client.ChangePasswordClient"
             android:exported="false" />
