Solicitudes de servicios y mejoras.
-Peticiones de creación de servicios.
-Admin. acepta o rechaza solicitudes.
-Corrección de errores.
-Mejoras de interfaz, optimización de código y mejoras visuales.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,7 +101,9 @@
             android:exported="false" />
         <activity
             android:name=".Admin.RequestsAdmin"
-            android:exported="false" /> <!-- Common Activities -->
+            android:exported="false" />
+        <activity android:name=".Admin.SolicitudeServices"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
