Lista de autorizaciones para crear servicios desde el admin.
Se realiza la tarea de que el especialista no debería poder ofrecer servicios sin antes ser verificado por el Admin (debería haber un apartado de "Solicitudes de especialistas" en el menú del Admin).

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/Base.Theme.ProyectoFixitFinal.Fixit"
         tools:targetApi="31">
-
-        <!-- Specialist Activities -->
+        <activity
+            android:name=".Admin.AuthSpecialistProfile"
+            android:exported="false" />
+        <activity
+            android:name=".Admin.AuthSpecialist"
+            android:exported="false" /> <!-- Specialist Activities -->
         <activity
             android:name=".Specialist.ServicesRequest"
             android:exported="true" />
@@ -54,9 +58,7 @@
             android:exported="true" />
         <activity
             android:name=".Specialist.DetailServiceClient"
-            android:exported="true" />
-
-        <!-- Client Activities -->
+            android:exported="true" /> <!-- Client Activities -->
         <activity
             android:name=".Client.PersonalProfileSpecialist"
             android:exported="true" />
@@ -77,9 +79,7 @@
             android:exported="false" />
         <activity
             android:name=".Client.ClientsComments"
-            android:exported="false" />
-
-        <!-- Admin Activities -->
+            android:exported="false" /> <!-- Admin Activities -->
         <activity
             android:name=".Admin.MenuAdmin"
             android:exported="false" />
@@ -107,10 +107,9 @@
         <activity
             android:name=".Admin.RequestsAdmin"
             android:exported="false" />
-        <activity android:name=".Admin.SolicitudeServices"
-            android:exported="false" />
-
-        <!-- General Activities -->
+        <activity
+            android:name=".Admin.SolicitudeServices"
+            android:exported="false" /> <!-- General Activities -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
